borsh/tests/roundtrip/snapshots/tests__roundtrip__test_btree_map__1_element_btreeset.snap
---
source: borsh/tests/roundtrip/test_btree_map.rs
expression: data
---
[
    1,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
]
