borsh/tests/roundtrip/snapshots/tests__roundtrip__test_btree_map__default_btreemap.snap
---
source: borsh/tests/roundtrip/test_btree_map.rs
expression: data
---
[
    2,
    0,
    0,
    0,
    3,
    0,
    0,
    0,
    102,
    111,
    111,
    3,
    0,
    0,
    0,
    98,
    97,
    114,
    3,
    0,
    0,
    0,
    111,
    110,
    101,
    3,
    0,
    0,
    0,
    116,
    119,
    111,
]
