borsh/tests/roundtrip/snapshots/tests__roundtrip__test_btree_map__empty_btreemap.snap
---
source: borsh/tests/roundtrip/test_btree_map.rs
expression: data
---
[
    0,
    0,
    0,
    0,
]
